--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="gridPadre">
     <div class="gridContainer">
         <header class="navBackground">
-            <h1 class="tiendaDeRopa">Tienda de Ropa </h1>
+            <h1  animate__bounce class="tiendaDeRopa">Tienda de Ropa </h1>
     </div>
 
     <nav class="gridNav">
@@ -22,11 +22,11 @@
             <i class="menuIcon"><img src="img/menu.svg" alt=""></i>
         </label>
         <ul class="listas">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pages/Stock.html">Stock</a></li>
-            <li><a href="pages/Contacto.html">Contacto</a></li>
-            <li><a href="pages/ubicacion.html">Ubicacion</a></li>
-            <li><a href="pages/Preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
+            <li class="inicio"><a href="index.html">Inicio</a></li>
+            <li class="stock"><a href="pages/Stock.html">Stock</a></li>
+            <li class="contacto"><a href="pages/Contacto.html">Contacto</a></li>
+            <li class="ubicacion"><a href="pages/ubicacion.html">Ubicacion</a></li>
+            <li class="preguntas"><a href="pages/Preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
         </ul>
         </header>
     </nav>
