--- a/index.html
+++ b/index.html
@@ -7,28 +7,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de ropa Prototipo</title>
     <link rel="shortcut icon" href="../img/coder.jpg" type="image/x-icon">
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/estilo.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Animaciones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
 <body class="gridPadre">
     <div class="gridContainer">
         <header class="navBackground">
-            <h1  animate__bounce class="tiendaDeRopa">Tienda de Ropa </h1>
+
+            <h1 class="animate__flash tiendaDeRopa">Tienda de Ropa </h1>
     </div>
 
-    <nav class="gridNav">
+    <!-- <nav class="gridNav">
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class="menuIcon"><img src="img/menu.svg" alt=""></i>
-        </label>
-        <ul class="listas">
-            <li class="inicio"><a href="index.html">Inicio</a></li>
-            <li class="stock"><a href="pages/Stock.html">Stock</a></li>
-            <li class="contacto"><a href="pages/Contacto.html">Contacto</a></li>
-            <li class="ubicacion"><a href="pages/ubicacion.html">Ubicacion</a></li>
-            <li class="preguntas"><a href="pages/Preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
-        </ul>
-        </header>
+        </label> -->
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="listas">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/Stock.html">Stock</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/Contacto.html">Contacto</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/ubicacion.html">Ubicacion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/Preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                    </li>
+
+                </ul>
+                <!-- <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form> -->
+            </div>
+        </div>
+    </nav>
+    </header>
     </nav>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -44,11 +78,28 @@
 
 
     <main>
-
-        <div class="contenedor">
-            <ul>
-                <li>
-                    <img class="imgPrincipal" src="https://placekitten.com/200/287" alt=""> </li>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/off.jpg" width="100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/sale.jpg" width="100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/blackfriday.jpg" width="100%">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
         <div class="medio">
             <ul>
@@ -61,30 +112,43 @@
             </ul>
 
         </div>
-        <div class="padreFlex">
+        <nav class="padreFlex">
 
-            <div class="hijoFlex">
-                <img src="https://placekitten.com/g/200/300" alt="">
+            <div class="hijoFlexUno">
+                <img src="img/imagen1.jpg" alt="" class="img-fluid">
 
-            </div>
-            <div class="hijoFlex">
-                <img src="https://placekitten.com/g/200/300" alt="">
             </div>
             <div class="hijoFlex">
-                <img src="https://placekitten.com/g/200/300" alt="">
-
+                <img src="img/imagen2.jpg" alt="" class="img-fluid">
+            </div>
+            <div class="hijoFlexDos">
+                <img src="img/imagen3.jpg" alt="" class="img-fluid">
             </div>
 
-            <div class="hijoFlexCuatro">
-                <img src="https://placekitten.com/g/200/300" alt="">
-            </div>
+        </nav>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+        </script>
+
+
+
 </body>
+
 </main>
 
-<footer class="footerin">
-
-    <P>Sitio web creado por <strong>Juan Amoros</strong></P>
-
-</footer>
+<div class="container">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+            <li class="nav-item"><a href="pages/Stock.html" class="nav-link px-2 text-muted">Stock</a></li>
+            <li class="nav-item"><a href="pages/Contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+            <li class="nav-item"><a href="pages/Preguntasfrecuentes.html" class="nav-link px-2 text-muted">Preguntas
+                    Frecuentes</a></li>
+            <li class="nav-item"><a href="pages/ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
+        </ul>
+        <p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
+    </footer>
+</div>
 
 </html>
