--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -8,57 +8,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de contacto</title>
     <link rel="shortcut icon" href="../img/coder.jpg" type="image/x-icon">
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<header class="navBackground">
-    <h1 class="tiendaDeRopa">Tienda de Ropa </h1>
-    <nav class="nav">
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="menuIcon"><img src="../img/menu.svg" alt=""></i>
-        </label>
-        <ul class="listas">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="Stock.html">Stock</a></li>
-            <LI class="lista"><a href="Contacto.html">Contacto</a></LI>
-            <li><a href="ubicacion.html">Ubicacion</a></li>
-            <li><a href="Preguntasfrecuentes.html">Preguntas Frecuentes</a>
-                <link rel="stylesheet"
-                    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-                <link rel="stylesheet"
-                    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-                <a href="https://api.whatsapp.com/send?phone=12345678&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
-                    class="float" target="_blank">
-                    <i class="fa fa-whatsapp myFloat"></i>
-                </a>
-            </li>
+
+<body>
+    <header class="navBackground">
+        <h1 class="tiendaDeRopa">Tienda de Ropa </h1>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="listas">
+                            <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Stock.html">Stock</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Contacto.html">Contacto</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                        </li>
+
+                    </ul>
+    </header>
+    <main class="mainform">
+
+        <form class="form">
+            <fieldset>
+                <legend>Formulario De Contacto</legend>
+                <label for="Nombre">Nombre</label>
+                <input id="Nombre" name="" id="" placeholder="Ingrese su nombre aqui">
+                <br> <br>
+                <label for="Apellido">Apellido</label>
+                <input id="Apellido" name="" id="" placeholder="Ingrese su nombre aqui">
+                <br><br>
+                <label for="">Correo Electronico</label>
+                <input type="Email" name="" id="" placeholder="Ingrese su nombre aqui">
+                <br> <br>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <br><br>
+                <input type="Submit">
+                <input type="Reset" value="Borra todo por favor">
+            </fieldset>
+        </form>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+</body>
+</div>
+<div class="container">
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+            <li class="nav-item"><a href="Stock.html" class="nav-link px-2 text-muted">Stock</a></li>
+            <li class="nav-item"><a href="Contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+            <li class="nav-item"><a href="Preguntasfrecuentes.html" class="nav-link px-2 text-muted">Preguntas
+                    Frecuentes</a></li>
+            <li class="nav-item"><a href="ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
         </ul>
-    </nav>
-</header>
-<main class="mainform">
+        <p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
+    </footer>
+</div>
 
-    <form class="form">
-        <fieldset>
-            <legend>Formulario De Contacto</legend>
-            <label for="Nombre">Nombre</label>
-            <input id="Nombre" name="" id="" placeholder="Ingrese su nombre aqui">
-            <br> <br>
-            <label for="Apellido">Apellido</label>
-            <input id="Apellido" name="" id="" placeholder="Ingrese su nombre aqui">
-            <br><br>
-            <label for="">Correo Electronico</label>
-            <input type="Email" name="" id="" placeholder="Ingrese su nombre aqui">
-            <br> <br>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <br><br>
-            <input type="Submit">
-            <input type="Reset" value="Borra todo por favor">
-        </fieldset>
-    </form>
-</main>
-
-
-<footer class="footerin">
-
-    <P>Sitio web creado por <strong>Juan Amoros</strong></P>
-</footer>
+</html>
