--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -70,9 +70,9 @@
     </script>
 </body>
 </div>
-<div class="container">
+<div class="footer">
     <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
+        <ul class="nav justify-content-center border-bottom pb-1 mb-1 colorFooter">
             <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
             <li class="nav-item"><a href="Stock.html" class="nav-link px-2 text-muted">Stock</a></li>
             <li class="nav-item"><a href="Contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
