--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 </main>
 
-<div class="container">
+<div class="footer">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
             <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
