--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -70,7 +70,7 @@
     </script>
 </body>
 </div>
-<div class="footer">
+<div>
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-1 mb-1 colorFooter">
             <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
