--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -61,7 +61,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 </script>
 </body>
-<div class="container">
+<div class="footer">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
             <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
