--- a/pages/Preguntasfrecuentes.html
+++ b/pages/Preguntasfrecuentes.html
@@ -41,16 +41,52 @@
 
 				</ul>
 </header>
-<nav class="navPreguntas">
-	<h2>¿Hacemos Envios?</h2>
-	<h4>Si! A todo el pais a través de oca</h4>
-	<h2>¿Hacemos punto de encuentro?</h2>
-	<h4>Si! Con coordinación previa</h4>
-	<h2>¿Tienen devolucion las prendas?</h2>
-	<h4>Si! Siempre y cuando esten igual que como se mandaron</h4>
-	<h2>¿Cuáles son los métodos de pago? </h2>
-	<h4>Para las compras online, contamos con todas las tarjetas de créditos, débito, Mercado Pago y pagos en
-		efectivo</h4>
+<div class="accordion" id="accordionExample">
+	<div class="accordion-item">
+		<h2 class="accordion-header" id="headingOne">
+			<button class="accordion" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+				aria-expanded="true" aria-controls="collapseOne">
+				¿Hacemos Envios?
+			</button>
+		</h2>
+		<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+			data-bs-parent="#accordionExample">
+			<div class="accordion-body , text-center">
+				<strong>Si! A todo el pais a través de oca</strong> cualquier duda preguntanos ! <a
+					class="text-decoration-none" href="contacto.html">Contacto</a>
+			</div>
+		</div>
+	</div>
+	<div class="accordion-item">
+		<h2 class="accordion-header" id="headingTwo">
+			<button class="collapsed" type="button" data-bs-toggle="collapse"
+				data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+				¿Hacemos punto de encuentro?
+			</button>
+		</h2>
+		<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+			data-bs-parent="#accordionExample">
+			<div class="accordion-body , text-center">
+				<strong>Si! Con coordinación previa</strong>
+			</div>
+		</div>
+	</div>
+	<div class="accordion-item">
+		<h2 class="accordion-header" id="headingThree">
+			<button class="collapsed" type="button" data-bs-toggle="collapse"
+				data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+				¿Tienen devolucion las prendas?
+			</button>
+		</h2>
+		<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+			data-bs-parent="#accordionExample">
+			<div class="accordion-body , text-center">
+				<strong>Si! Siempre y cuando esten igual que como se mandaron</strong>
+			</div>
+		</div>
+		
+	</div>
+</div>
 
 
 </nav>
