--- a/pages/Stock.html
+++ b/pages/Stock.html
@@ -50,28 +50,150 @@
         <h1 class="titulostock">Stock</h1>
 
         <h2 class="titulostock">Para entrega inmediata</h2>
-        <div class="stockimgContenedor">
-            <img src="../img/imagen4.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen5.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen6.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen7.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen8.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen9.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen10.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen11.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen12 (1).jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen13.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen14.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen15.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen16.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen17.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen18.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen19.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen1.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen2.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="../img/imagen3.jpg" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <!-- <img src="../img/imagen" alt="Gato" class="rounded-3 border border-4 stockimg">
-            <img src="https://placekitten.com/408/287" alt="Gato" class="rounded-3 border border-4 stockimg"> -->
+        <div class="stockimgContenedor row mt-4">
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen1.jpg" class="rounded-3  border border-4 stockimg" alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen2.jpg" class=" card-img-top rounded-3 d-grid gap-3  border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen3.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen4.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen5.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen6.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen7.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen8.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen9.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen10.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen11.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen12 (1).jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen13.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen14.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen15.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen16.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen17.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../img/imagen18.jpg" class="rounded-3 gap-3 border border-4 stockimg"
+                    alt="Conjunto de encaje 1">
+                <div class="card-body">
+                    <p class="card-text">Conjunto de encaje.</p>
+                    <strong class="precioStock">$1500</strong>
+                </div>
+            </div>
         </div>
     </main>
 
