--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/off.jpg" width="100%">
+                    <img src="img/blackfriday1.jpg" width="100%">
                 </div>
                 <div class="carousel-item">
                     <img src="img/sale.jpg" width="100%">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/blackfriday.jpg" width="100%">
+                    <img src="img/friday2.jpg" width="100%">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
