--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="medio">
+        <div class="anuncios">
             <ul>
                 <li>Envíos gratis A partir de compras superiores a $20.000</li>
 
@@ -112,19 +112,6 @@
             </ul>
 
         </div>
-        <nav class="padreFlex">
-
-            <div class="hijoFlexUno">
-                <img src="img/imagen1.jpg" alt="" class="img-fluid">
-
-            </div>
-            <div class="hijoFlex">
-                <img src="img/imagen2.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="hijoFlexDos">
-                <img src="img/imagen3.jpg" alt="" class="img-fluid">
-            </div>
-
         </nav>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
