--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Animaciones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- KEYWORDS -->
+    <meta name="description" content="Tienda de ropa">
+    <meta name="keywords" content="Mujer,Ropa femenina,">
+
 
 </head>
 
@@ -23,12 +27,6 @@
 
             <h1 class="animate__flash tiendaDeRopa">Tienda de Ropa </h1>
     </div>
-
-    <!-- <nav class="gridNav">
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="menuIcon"><img src="img/menu.svg" alt=""></i>
-        </label> -->
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
@@ -55,10 +53,6 @@
                     </li>
 
                 </ul>
-                <!-- <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
             </div>
         </div>
     </nav>
@@ -81,13 +75,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/blackfriday1.jpg" width="100%">
+                    <img src="img/blackfriday1.jpg" width="100%" alt="Imagen de ofertas">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/sale.jpg" width="100%">
+                    <img src="img/sale.jpg" width="100%" alt="Imagen de ofertas">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/friday2.jpg" width="100%">
+                    <img src="img/friday2.jpg" width="100%" alt="Imagen de ofertas">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
