--- a/pages/Stock.html
+++ b/pages/Stock.html
@@ -12,6 +12,9 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- KEYWORDS -->
+        <meta name="description" content="Tienda de ropa">
+        <meta name="keywords" content="Mujer,Ropa femenina,">
 
 </head>
 <header class="navBackground">
@@ -47,9 +50,9 @@
 <body>
 
     <main>
-        <h1 class="titulostock">Stock</h1>
+        <h2 class="titulostock">Stock</h2>
 
-        <h2 class="titulostock">Para entrega inmediata</h2>
+        <h3 class="titulostock">Para entrega inmediata</h3>
         <div class="stockimgContenedor row mt-4">
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen1.jpg" class="rounded-3  border border-4 stockimg" alt="Conjunto de encaje 1">
@@ -60,7 +63,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen2.jpg" class=" card-img-top rounded-3 d-grid gap-3  border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 2">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -68,7 +71,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen3.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 3">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -76,7 +79,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen4.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 4">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -84,7 +87,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen5.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 5">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -92,7 +95,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen6.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 6">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -100,7 +103,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen7.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 7">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -108,7 +111,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen8.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 8">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -116,7 +119,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen9.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 9">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -124,7 +127,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen10.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 10">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -132,7 +135,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen11.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 11">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -140,7 +143,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen12 (1).jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 12">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -148,7 +151,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen13.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 13">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -156,7 +159,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen14.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 14">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -164,7 +167,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen15.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 15">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -172,7 +175,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen16.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 16">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -180,7 +183,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen17.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 17">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
@@ -188,7 +191,7 @@
             </div>
             <div class="card" style="width: 18rem;">
                 <img src="../img/imagen18.jpg" class="rounded-3 gap-3 border border-4 stockimg"
-                    alt="Conjunto de encaje 1">
+                    alt="Conjunto de encaje 18">
                 <div class="card-body">
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
