--- a/pages/Preguntasfrecuentes.html
+++ b/pages/Preguntasfrecuentes.html
@@ -18,7 +18,7 @@
 
 </head>
 <header class="navBackground">
-	<h1 class="tiendaDeRopa">Tienda de Ropa </h1>
+	<h1 class="tiendaDeRopa">Lingerie Fabuleux</h1>
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<div class="container-fluid">
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
