--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="gridContainer">
         <header class="navBackground">
 
-            <h1 class="animate__flash tiendaDeRopa">Tienda de Ropa </h1>
+            <h1 class="animate__flash tiendaDeRopa">Lingerie Fabuleux</h1>
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light">
