--- a/pages/Stock.html
+++ b/pages/Stock.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock</title>
-    <link rel="shortcut icon" href="../img/coder.jpg" type="image/x-icon">
+    <title>Stock Lingerie Fabuleux</title>
+    <link rel="shortcut icon" href="../img/icon.png" type="image/x-icon">
         <!-- CSS -->
         <link rel="stylesheet" href="../css/estilo.css">
     <!-- Bootstrap -->
