--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ubicacion</title>
-    <link rel="shortcut icon" href="../img/coder.jpg" type="image/x-icon">
+    <title>Ubicacion Lingerie Fabuleux</title>
+    <link rel="shortcut icon" href="../img/icon.png" type="image/x-icon">
     <!-- CSS boton wsp -->
     <link rel="stylesheet" href="../pages/css/whatsapp.css">
     <!-- Bootstrap -->
@@ -51,11 +51,10 @@
 <main>
     <nav class="navubi">
 
-        <h2>Estamos ubicados en Av. 9 de Julio & Av. Corrientes, C1048 CABA </h2>
+        <h2>Estamos ubicados en General San Martin</h2>
 
         <iframe
-            src="
-        https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.014264616898!2d-58.3821878!3d-34.603800799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacf425a4a19%3A0xaf19ab7297421a8!2sAv.%209%20de%20Julio%20%26%20Av.%20Corrientes%2C%20C1048%20CABA!5e0!3m2!1ses!2sar!4v1650671830734!5m2!1ses!2sar"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13140.451386208344!2d-58.54620051566455!3d-34.576011087464934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb77160243783%3A0x5e21a2d3c0a65957!2sSan%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1654644313276!5m2!1ses-419!2sar"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
