--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <div class="footer">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
-            <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Inicio</a></li>
             <li class="nav-item"><a href="pages/Stock.html" class="nav-link px-2 text-muted">Stock</a></li>
             <li class="nav-item"><a href="pages/Contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
             <li class="nav-item"><a href="pages/Preguntasfrecuentes.html" class="nav-link px-2 text-muted">Preguntas
