--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -35,34 +35,37 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Stock.html">Stock</a>
+                        <a class="nav-link" href="stock.html">Stock</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     <li class="nav-item">
                         <a class="nav-link" href="ubicacion.html">Ubicacion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                        <a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
                     </li>
 
                 </ul>
 </header>
-<main>
-    <nav class="navubi">
 
-        <h2>Estamos ubicados en General San Martin</h2>
+<body>
 
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13140.451386208344!2d-58.54620051566455!3d-34.576011087464934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb77160243783%3A0x5e21a2d3c0a65957!2sSan%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1654644313276!5m2!1ses-419!2sar"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <main>
+        <nav class="navubi">
 
-    </nav>
-</main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-</script>
+            <h2>Estamos ubicados en General San Martin</h2>
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13140.451386208344!2d-58.54620051566455!3d-34.576011087464934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb77160243783%3A0x5e21a2d3c0a65957!2sSan%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1654644313276!5m2!1ses-419!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        </nav>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 <div class="footer">
     <footer class="py-3 my-4">
@@ -77,6 +80,6 @@
         <p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
     </footer>
 </div>
-
+</body>
 
 </html>
