--- a/index.html
+++ b/index.html
@@ -41,32 +41,27 @@
                         <a class="nav-link" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/Stock.html">Stock</a>
+                        <a class="nav-link" href="pages/stock.html">Stock</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/Contacto.html">Contacto</a>
+                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
                     <li class="nav-item">
                         <a class="nav-link" href="pages/ubicacion.html">Ubicacion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/Preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                        <a class="nav-link" href="pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
                     </li>
 
                 </ul>
             </div>
-        </div>
     </nav>
     </header>
-    </nav>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <a href="https://api.whatsapp.com/send?phone=12345678&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
         class="float" target="_blank">
         <i class="fa fa-whatsapp myFloat"></i>
     </a>
-    </li>
-    </ul>
-    </div>
 
 
 
@@ -111,11 +106,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
-
-
-
-</body>
-
 </main>
 
 <div class="footer">
@@ -131,5 +121,7 @@
         <p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
     </footer>
 </div>
+</body>
+
 
 </html>
