--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -11,11 +11,11 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
-        <!-- KEYWORDS -->
-        <meta name="description" content="Tienda de ropa">
-        <meta name="keywords" content="Mujer,Ropa femenina,">
+    <!-- KEYWORDS -->
+    <meta name="description" content="Tienda de ropa">
+    <meta name="keywords" content="Mujer,Ropa femenina,">
 
 </head>
 
@@ -35,15 +35,15 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Stock.html">Stock</a>
+                            <a class="nav-link" href="stock.html">Stock</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Contacto.html">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         <li class="nav-item">
                             <a class="nav-link" href="ubicacion.html">Ubicacion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                            <a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
                         </li>
 
                     </ul>
@@ -51,43 +51,42 @@
     <main class="mainform">
 
         <form class="row form">
-            <div class="col-3 form">
+            <div class="email">
                 <label for="emailInput" class="form-label">Email</label>
                 <input type="email" class="form-control" id="emailInput" placeholder="Escribe Tu Email">
             </div>
-            <div class="col-3 form">
+            <div class="nombre">
                 <label for="inputnombre" class="form-label">Nombre</label>
                 <input type="nombre" class="form-control" id="inputnombre" placeholder="Escribe Tu Nombre">
             </div>
-            <div class="col-3 form">
+            <div class="apellido">
                 <label for="inputApellido" class="form-label">Apellido</label>
                 <input type="apellido" class="form-control" id="inputApellido" placeholder="Escribe Tu Apellido">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Escribe Tu pregunta"></textarea>
-            <input type="Submit">
-                <input type="Reset" value="Borrar todo">
+            <textarea class="insertarTexto" name="" id="" cols="30" rows="10"
+                placeholder="Escribe tu pregunta y nos Pondremos en contacto"></textarea>
+            <input class="insertarTexto" type="Submit">
+            <input class="insertarTexto" type="Reset" value="Borrar todo">
             </fieldset>
-            
+
 
         </form>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <div>
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-1 mb-1 colorFooter">
+                <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
+                <li class="nav-item"><a href="Stock.html" class="nav-link px-2 text-muted">Stock</a></li>
+                <li class="nav-item"><a href="Contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
+                <li class="nav-item"><a href="Preguntasfrecuentes.html" class="nav-link px-2 text-muted">Preguntas
+                        Frecuentes</a></li>
+                <li class="nav-item"><a href="ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
+            </ul>
+            <p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
+        </footer>
+    </div>
 </body>
-</div>
-<div>
-    <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-1 mb-1 colorFooter">
-            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Inicio</a></li>
-            <li class="nav-item"><a href="Stock.html" class="nav-link px-2 text-muted">Stock</a></li>
-            <li class="nav-item"><a href="Contacto.html" class="nav-link px-2 text-muted">Contacto</a></li>
-            <li class="nav-item"><a href="Preguntasfrecuentes.html" class="nav-link px-2 text-muted">Preguntas
-                    Frecuentes</a></li>
-            <li class="nav-item"><a href="ubicacion.html" class="nav-link px-2 text-muted">Ubicacion</a></li>
-        </ul>
-        <p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
-    </footer>
-</div>
-
 </html>
