--- a/pages/Stock.html
+++ b/pages/Stock.html
@@ -32,15 +32,15 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Stock.html">Stock</a>
+                        <a class="nav-link" href="stock.html">Stock</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     <li class="nav-item">
                         <a class="nav-link" href="ubicacion.html">Ubicacion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Preguntasfrecuentes.html">Preguntas Frecuentes</a>
+                        <a class="nav-link" href="preguntasfrecuentes.html">Preguntas Frecuentes</a>
                     </li>
 
                 </ul>
@@ -196,14 +196,11 @@
                     <p class="card-text">Conjunto de encaje.</p>
                     <strong class="precioStock">$1500</strong>
                 </div>
-            </div>
-        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-</body>
 <div class="footer">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3 colorFooter">
@@ -217,6 +214,6 @@
         <p class="text-center text-muted">&copy;Pagina creada por Juan Amoros</p>
     </footer>
 </div>
-
+</body>
 
 </html>
